RESOLVED FIXED49133
Web Inspector: XHR logging is not checked in context menu after browser restart.
https://bugs.webkit.org/show_bug.cgi?id=49133
Summary Web Inspector: XHR logging is not checked in context menu after browser restart.
Pavel Feldman
Reported 2010-11-06 14:47:35 PDT
1. Enable XHR logging in console context menu 2. Restart browser 3. Open console XHR logs are there, but XHR logging item in the context menu is not enabled.
Attachments
[PATCH] Proposed fix. (1.29 KB, patch)
2010-11-06 15:03 PDT, Pavel Feldman
timothy: review+
Pavel Feldman
Comment 1 2010-11-06 14:56:13 PDT
(the reason is that inspector state has monitoringXHR property, while front-end expects monitoringXHREnabled property).
Pavel Feldman
Comment 2 2010-11-06 15:03:42 PDT
Created attachment 73178 [details] [PATCH] Proposed fix.
Pavel Feldman
Comment 3 2010-11-06 23:23:40 PDT
Committing to http://svn.webkit.org/repository/webkit/trunk ... M WebCore/ChangeLog M WebCore/inspector/InspectorState.cpp Committed r71476
Note You need to log in before you can comment on or make changes to this bug.