2010-11-06  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Timothy Hatcher.

        Web Inspector: XHR logging is not checked in context menu after browser restart.
        https://bugs.webkit.org/show_bug.cgi?id=49133

        * inspector/InspectorState.cpp:
        (WebCore::InspectorState::InspectorState):


Canonical link: https://commits.webkit.org/61963@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71476 268f45cc-cd09-0410-ab3c-d52691b4dbfc